# easy-fints

./: .dockerignore  .env_example  .gitignore  Dockerfile  LICENSE  POST_transfer_workflow.md  README.md  TODO.md  USECASE.md  VERIFICATION.md  api_tan_test_helper.py  docker-compose.yml  pyproject.toml  requirements.txt  test_accounts_api_tan.py  test_balance_api_tan.py  test_single_account_api_tan.py  test_transactions_api_tan.py  test_transfer_api_tan.py
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: API.md
easy_fints/: __init__.py  _client_common.py  _client_confirmation.py  _client_reads.py  _client_runtime.py  _client_transfer.py  api.py  cli.py  client.py  fastapi_app.py  helpers.py  library.py  models.py  service.py
easy_fints/transaction_mapping/: __init__.py  base.py  default.py  vr_camt.py
examples/: accounts_api_tan.py  accounts_lib.py  api_tan_helper.py  balance_api_tan.py  balance_lib.py  bank_info_api.py  bank_info_lib.py  lib_helper.py  single_account_api_tan.py  single_account_lib.py  transactions_api_tan.py  transactions_lib.py  transfer_api_tan.py  transfer_lib.py
fints_rest_wrapper/: __init__.py  cli.py  client.py  fastapi_app.py
src/: __init__.py  client.py  diagnostics.py  env_config.py  exceptions.py  fastapi_app.py  helpers.py  models.py
tests/: conftest.py  test_account_enrichment.py  test_api_bank_info.py  test_api_read_flows.py  test_api_readiness.py  test_api_session_lifecycle.py  test_api_transfer_flows.py  test_cli.py  test_client_transfer_resume.py  test_debug_logging.py  test_helpers.py  test_ing_patch.py  test_logging_sanitization.py  test_module_entrypoints.py  test_package_exports.py  test_retry_detection.py  test_service.py
tests/support/: fake_fints_backend.py
