[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fints-rest-wrapper"
version = "1.0.1"
description = "Small FastAPI wrapper around python-fints"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "qhle" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "fints",
  "Markdown",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["fints_rest_wrapper*"]
