[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fints-rest-wrapper"
version = "1.0.5"
description = "Small FastAPI wrapper around python-fints"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "qhle" },
]
license-files = ["LICENSE"]
keywords = ["fints", "hbci", "fastapi", "banking", "rest", "api"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "fints",
  "Markdown",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
]

[project.scripts]
fints-rest-server = "fints_rest_wrapper.cli:main"

[project.urls]
Homepage = "https://github.com/QHLe/Python-Fints-REST-wrapper"
Repository = "https://github.com/QHLe/Python-Fints-REST-wrapper"
Issues = "https://github.com/QHLe/Python-Fints-REST-wrapper/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["fints_rest_wrapper*"]
